- Main game layout updated - User can now choose what was announced in an extra "window" - Choosing activity adapts itself based on the choices made by the user - After confirming the announcement is shown on the main game layout - Some comments added for better documentation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
             android:name=".MainGameActivity"
             android:label="@string/title_activity_main_game"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ChooseGame"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
     </application>
 
 </manifest>
